# renju

./: .gitignore  README.md  progress_log.org  requirements.txt
cpp_test/: CMakeLists.txt  main.cc  rules.h
data/: data_process.ipynb
labs/: README.md  lab-1.ipynb  lab-2.ipynb
labs/lab1/: lab-1.ipynb  lab-1.py
labs/lab2/: lab-2.ipynb
labs/lab3/: lab-3.ipynb
labs/lab4/: lab-4.ipynb  savesome.py  tictactoe.py
src/: BUILD  CMakeLists.txt  Playground.ipynb  agent.py  demo  draft.ipynb  gui.py  keras2tf  main.cpp  mcts.hpp  nnet.py  renju.py  rollout.hpp  rules.hpp  train  train.py  util.hpp  util.py
src/.trash/: nnet.py
src/cpp_test/: CMakeLists.txt  backup.cc  bazel  logger.h  main.cc  mcts.h  policy.h  rollout.h  rules.h  util.h
src/data/: .gitattributes  data_process.ipynb  test.renju  train.renju
src/gomoku/: agent.py  gui.py  nnet.py  rules.py  util.py
src/libs/tensorflow/include/tensorflow/cc/ops/: array_ops.h  data_flow_ops.h  image_ops.h  image_ops_internal.h  io_ops.h  linalg_ops.h  math_ops.h  nn_ops.h  nn_ops_internal.h  parsing_ops.h  random_ops.h  sparse_ops.h  state_ops.h  string_ops.h  training_ops.h
src/libs/tensorflow/include/tensorflow/core/framework/: device_attributes.pb.h
src/libs/tensorflow/include/tensorflow/core/protobuf/: rewriter_config.pb.h
src/libs/tensorflow/include/tensorflow/core/util/: event.pb.h
